# ROS-demo

./: .clang-format  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.devcontainer_bk/: Dockerfile
.devcontainer_jazzy/: docker-compose.yaml
floor_map/: floor.world
maps/: map_house.pgm  map_house.yaml  map_world.pgm  map_world.yaml  world_slam_toolbox.pgm  world_slam_toolbox.yaml
ros_beginner/src/car_bringup/: package.xml
ros_beginner/src/my_robot_interfaces/: package.xml
ros_beginner/src/udemy_robot_bringup/: package.xml
src/: nav2_single_point_template.py  nav2_wallpoint_template.py
src/arm_bringup/: CMakeLists.txt  package.xml
src/arm_bringup/launch/: combine_gazebo.launch.xml
src/arm_description/: CMakeLists.txt  complete_robot.pdf.gv  package.xml
src/arm_description/launch/: arm_display.launch.xml  display.launch.xml
src/arm_description/rviz/: robot_config.rviz
src/arm_description/urdf/: arm.urdf.xacro  arm_links.xacro  arm_links_gazebo.xacro  inertia.xacro  material.xacro  (+1 more)
src/car_bringup/: CMakeLists.txt  package.xml
src/car_description/: CMakeLists.txt  package.xml
src/hello_moveit/: package.xml
src/hello_moveit_draw/: CMakeLists.txt  package.xml
src/hello_moveit_object/: CMakeLists.txt  package.xml
src/mtc_tutorial/: CMakeLists.txt  package.xml
src/my_cpp_pkg/: package.xml
src/my_py_pkg/: package.xml
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_interfaces/: CMakeLists.txt
src/turtle_control/: CMakeLists.txt  package.xml
src/turtle_control/launch/: turtle_catch_launch.py
src/turtle_control/msg/: CaughtIt.msg  Goal.msg
src/turtle_control/src/: turtle_controller.cpp  turtle_spawner.cpp
src/turtlebot3_gazebo/: CMakeLists.txt
src/udemy_robot_description/: CMakeLists.txt  package.xml
src/ur5e_camera_pick/: CMakeLists.txt  package.xml
urdf/: my_robot.urdf
(+72 files in other folders)
